# microservices-example

./: .env.example  .env.test  .gitignore  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  promtail-config.yaml
.github/workflows/: test.yml  test_service.yml
docs/: architecture-ru.md  data-access-patterns-ru.md  kafka-configuration-ru.md  monitoring-ru.md
gateway/: .env.docker  .env.test  Dockerfile  locustfile.py  main.py  pyproject.toml
gateway/api_v1/graphql/: query_loader.py
gateway/api_v1/graphql/tasks/: resolvers.py  schemas.py
gateway/api_v1/graphql/tasks/mutations/: create_task.graphql  update_task.graphql
gateway/api_v1/graphql/tasks/queries/: get_task.graphql  get_tasks.graphql
gateway/api_v1/rest/: __init__.py
gateway/api_v1/rest/tasks/: dependencies.py  schemas.py  views.py
gateway/core/: config.py  logger.py
gateway/infrastructure/: external_service_facade.py  tasks_facade.py
gateway/infrastructure/kafka/: entry.py  producer.py
gateway/static/: swagger-custom-ui.css
tasks/: .env.docker  .env.test  Dockerfile  main.py  pyproject.toml  worker.py
tasks/api_v1/graphql/: context.py
tasks/api_v1/graphql/tasks/: resolvers.py  schemas.py
tasks/api_v1/rest/: __init__.py
tasks/api_v1/rest/tasks/: decorators.py  dependencies.py  exceptions.py  schemas.py  service.py  views.py
tasks/api_v1/service/: task.py
tasks/core/: config.py  logger.py
tasks/core/models/: __init__.py
tasks/core/repositories/: task.py
tasks/infrastructure/database/: db_connect.py  exceptions.py  uow.py
tasks/infrastructure/database/models/: __init__.py  base.py  task.py
tasks/infrastructure/database/repositories/: task.py
tasks/infrastructure/kafka/: producer.py
tasks/migrations/: env.py
tasks/migrations/versions/: 2025-08-24-001.py
tasks/scripts/: init_db.sh  init_test_db.sh
tasks/tests/: __init__.py  conftest.py
tasks/tests/integration/: test_graphql_api.py  test_kafka.py  test_rest_api.py
tasks/tests/performance/: test_performance_rest_api.py
tasks/tests/unit/: test_database_exceptions.py  test_task_repository.py  test_task_validation.py
