[project]
name = "gateway"
version = "0.1.0"
description = ""
authors = [{ name = "Powermacintosh", email = "ak.powermacintosh@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "aiokafka (>=0.12.0,<0.13.0)",
    "strawberry-graphql[debug-server] (>=0.282.0,<0.283.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
locust = "^2.40.5"
